--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@
 .video-section {
   background-color: #23233c;
   padding-top: 4rem;
-  padding-bottom: 4rem;
+  padding-bottom: 8rem;
+  position: relative;
 }
 
 .video-container {
@@ -35,8 +36,25 @@
   font-size: 2rem;
 }
 
+.video-content {
+  z-index: 20;
+}
+
 .video-iframe {
   border-radius: 15px;
   overflow: hidden;
   border: 2px solid #ccc;
+  z-index: 20;
+}
+
+.video-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 10;
+  opacity: 0.5;
+  pointer-events: none;
 }
