--- a/style.css
+++ b/style.css
@@ -109,3 +109,35 @@ body {
   opacity: 0.5;
   pointer-events: none;
 }
+
+/* services section */
+.service-advantages {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
+.advantages-container {
+  color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5rem;
+  h1 {
+    font-size: 2rem;
+  }
+}
+
+.services-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1rem;
+}
+
+.services-card {
+  padding: 2rem;
+  border-radius: 15px;
+  border: 2px solid #dddfec;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
