--- a/style.css
+++ b/style.css
@@ -112,8 +112,7 @@ body {
 
 /* services section */
 .service-advantages {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+  padding: 4rem;
 }
 
 .advantages-container {
@@ -121,7 +120,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1.5rem;
+  gap: 2rem;
   h1 {
     font-size: 2rem;
   }
@@ -140,4 +139,26 @@ body {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+
+.services-card:hover {
+  color: white;
+  background-color: #07f;
+}
+
+.services-cta-btn {
+  background-color: white;
+  color: #07f;
+  padding: 1rem;
+  text-align: center;
+  font-size: 1rem;
+  border-radius: 15px;
+  cursor: pointer;
+  max-width: 200px;
+  border: 1px solid #07f;
+}
+
+.services-cta-btn:hover {
+  background-color: #07f;
+  color: white;
 }
